3rd party libraries update
- Updated 3rd party libraries to their newest versions.

--- a/src/MvcTemplate.Web/Views/Shared/MvcDatalist/_Dialog.cshtml
+++ b/src/MvcTemplate.Web/Views/Shared/MvcDatalist/_Dialog.cshtml
@@ -1,27 +1,32 @@
-﻿<div id="DatalistDialog" class="datalist-dialog">
-    <div class="datalist-search-group">
-        <div class="datalist-search-box">
-            <input class="datalist-search" />
-            <div class="datalist-rows">
-                <input />
+﻿<div class="datalist-overlay">
+    <div class="datalist-wrapper">
+        <div id="DatalistDialog" class="datalist-dialog">
+            <div class="datalist-header">
+                <span class="datalist-title"></span>
+                <button class="datalist-close">×</button>
             </div>
-            <div class="datalist-selector">
-                <button></button>
+            <div class="datalist-body">
+                <div class="datalist-search-area">
+                    <input class="datalist-search" />
+                    <input class="datalist-rows" />
+                    <button class="datalist-selector"></button>
+                </div>
+                <div class="datalist-content">
+                    <div class="datalist-dialog-loader">
+                        <span></span>
+                    </div>
+                    <div class="datalist-dialog-error">
+                    </div>
+                    <div class="datalist-table">
+                        <table>
+                            <thead></thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div class="datalist-pager">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="datalist-content">
-        <div class="datalist-dialog-loader">
-            <span></span>
-        </div>
-        <div class="datalist-error">
-        </div>
-        <div class="datalist-table">
-            <table>
-                <thead></thead>
-                <tbody></tbody>
-            </table>
-        </div>
-        <ul></ul>
     </div>
 </div>
