--- a/src/MvcTemplate.Web/Content/MvcDatalist/mvc-datalist.css
+++ b/src/MvcTemplate.Web/Content/MvcDatalist/mvc-datalist.css
@@ -1,5 +1,5 @@
 ﻿/*!
- * Datalist 5.5.0
+ * Datalist 6.0.0
  * https://github.com/NonFactors/MVC5.Datalist
  *
  * Copyright © NonFactors
@@ -9,283 +9,469 @@
  */
 
 .datalist {
-    display: table;
+    display: flex;
     width: 100%;
 }
 
 .datalist-control {
-    box-shadow: rgba(0, 0, 0, 0.0745098) 0 1px 1px inset;
-    border-bottom-left-radius: 4px;
-    border-top-left-radius: 4px;
-    padding: 2px 2.4em 2px 6px;
-    background-color: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    box-sizing: border-box;
-    display: table-cell;
+    padding: 0.125rem 2rem 0.125rem 0.125rem;
+    border-radius: 0.25rem 0 0 0.25rem;
+    border: 1px solid #ced4da;
+    background: #ffffff;
     position: relative;
+    flex: 1;
 }
-
-    .datalist-control input {
-        outline: none;
-        font: inherit;
-        padding: 2px;
-        border: none;
-        margin: 2px;
-        width: 100%;
-    }
 
 .datalist-item {
-    transition: background linear 0.3s;
-    border: 1px solid #DDDDDD;
+    transition: background-color linear 0.3s;
+    padding: 1px 1px 1px 0.375rem;
+    border: 1px solid #dee2e6;
+    border-radius: 0.1875rem;
     display: inline-block;
-    background: #F8F8F8;
-    border-radius: 3px;
-    padding: 1px 6px;
+    white-space: nowrap;
+    background: #f8f8f8;
+    line-height: 1.5;
+    margin: 0.125rem;
+    font-size: 1rem;
     color: #999999;
-    margin: 2px;
 }
 
-    .datalist-item:hover {
-        border-color: #CCCCCC;
-        background: #F0F0F0;
-    }
+.datalist-item:hover {
+    border-color: #cccccc;
+    background: #f0f0f0;
+}
 
-.datalist-close {
-    margin-left: 6px;
+.datalist-deselect {
+    transition: color 0.5s;
+    padding: 0 0.25rem;
+    background: none;
     cursor: pointer;
+    color: #999999;
+    border: none;
 }
 
-    .datalist-close:hover {
-        color: #000000;
-    }
-
-.datalist-readonly .datalist-control,
-.datalist-readonly .datalist-control input {
-    background: #EEEEEE;
+.datalist-deselect:hover {
+    color: #000000;
 }
 
-.datalist-readonly .datalist-close {
+.datalist-input {
+    padding: 0.25rem 0 0.25rem 0.5rem;
+    box-sizing: border-box;
+    line-height: 1.5;
+    background: none;
+    font-size: 1rem;
+    color: #495057;
+    outline: none;
+    border: none;
+    height: 2rem;
+    width: 100%;
+}
+
+.datalist-input::-ms-clear {
     display: none;
 }
 
-.datalist-readonly .datalist-browse {
+.datalist-control-loader {
+    animation: datalist-spin 1s infinite linear;
+    border: 0.125rem solid rgba(0, 0, 0, 0.2);
+    border-top-color: #444444;
+    box-sizing: border-box;
+    border-radius: 50%;
+    position: absolute;
+    right: 0.75rem;
+    display: none;
+    height: 1rem;
+    top: 0.65rem;
+    width: 1rem;
+}
+
+.datalist-control-error {
+    border: 0.0625rem solid rgba(255, 0, 0, 0.5);
+    transition: opacity 0.3s linear;
+    color: rgba(255, 0, 0, 0.5);
+    box-sizing: border-box;
+    background: #ffffff;
+    border-radius: 50%;
+    text-align: center;
+    position: absolute;
+    font-size: 0.9rem;
+    cursor: default;
+    height: 1.5rem;
+    right: 0.4rem;
+    width: 1.5rem;
+    top: 0.4rem;
+    opacity: 0;
+}
+
+.datalist-loading .datalist-control-loader {
+    display: block;
+}
+
+.datalist-error .datalist-control-error {
+    opacity: 1;
+}
+
+.datalist-browser {
+    border-radius: 0 0.25rem 0.25rem 0;
+    border: 1px solid #ced4da;
+    padding: 0.375rem 0.75rem;
+    background: #e9ecef;
+    margin-left: -1px;
+    cursor: pointer;
+    color: #495057;
+}
+
+.datalist-browser:focus {
+    z-index: 2;
+}
+
+.datalist-browser:active {
+    outline: none;
+}
+
+.datalist-icon {
+    margin: 0 0.125rem 0.125rem 0;
+    transform: rotate(310deg);
+    box-sizing: border-box;
+    border: 0.125rem solid;
+    border-radius: 50%;
+    display: block;
+    height: 0.8rem;
+    width: 0.8rem;
+}
+
+.datalist-icon:before {
+    box-shadow: inset 0 0 0 2rem;
+    transform: translateX(-50%);
+    border-radius: 50%;
+    position: absolute;
+    width: 0.1875rem;
+    height: 0.5rem;
+    content: '';
+    top: 0.6rem;
+    left: 45%;
+}
+
+.datalist-readonly .datalist-control {
+    background: #e9ecef;
+}
+
+.datalist-readonly .datalist-item {
+    padding: 1px 0.375rem;
+}
+
+.datalist-readonly .datalist-deselect {
+    display: none;
+}
+
+.datalist-readonly .datalist-browser {
     cursor: not-allowed;
 }
 
 .datalist-browseless .datalist-control {
-    border-radius: 4px;
+    border-radius: 0.25rem;
 }
 
-.datalist-browse {
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
-    border: 1px solid #CCCCCC;
-    background-color: #EEEEEE;
-    vertical-align: middle;
-    display: table-cell;
-    padding: 0 12px;
-    cursor: pointer;
-    border-left: 0;
-    line-height: 1;
-    width: 1%;
+.datalist-open {
+    overflow: hidden;
 }
 
-.datalist-icon {
-    transform: rotate(310deg);
-    vertical-align: middle;
-    display: inline-block;
-    margin: 0 2px 2px 0;
-    border-radius: 50%;
-    border: 2px solid;
-    height: 0.8em;
-    width: 0.8em;
+.datalist-overlay {
+    background: rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
+    padding: 3rem 1rem;
+    overflow-x: auto;
+    position: fixed;
+    display: none;
+    z-index: 1000;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
 }
 
-    .datalist-icon:before {
-        box-shadow: inset 0 0 0 32px;
-        transform: translateX(-50%);
-        border-radius: 1px;
-        position: absolute;
-        height: 0.5em;
-        content: '';
-        width: 3px;
-        top: 0.6em;
-        left: 45%;
-    }
-
-.datalist-widget {
-    max-width: 98%;
+.datalist-wrapper {
+    justify-content: center;
+    display: flex;
 }
-
-    .datalist-widget .ui-dialog-title {
-        line-height: 1.4em;
-        min-height: 1.4em;
-    }
-
-    .datalist-dialog,
-    .datalist-widget,
-    .datalist-widget:after,
-    .datalist-widget:before {
-        -webkit-box-sizing: content-box;
-        -moz-box-sizing: content-box;
-        box-sizing: content-box;
-    }
-
-        .datalist-widget .datalist-dialog {
-            padding: 1em;
-        }
 
 .datalist-dialog {
-    font-size: 0.9em;
-    min-width: 428px;
-    display: none;
+    font-size: 0.875rem;
+    min-width: 400px;
+    max-width: 100%;
+    z-index: 1100;
 }
 
-.datalist-search-group {
-    height: calc(2em + 12px);
-    position: relative;
+@media (max-width: 575px) {
+    .datalist-dialog {
+        min-width: 325px;
+    }
 }
 
-.datalist-search-box {
-    position: absolute;
-    display: table;
+.datalist-header {
+    border: 1px solid rgba(30, 54, 101, 0.8);
+    border-radius: 0.25rem 0.25rem 0 0;
+    padding: 0.4rem 0.6rem 0.4rem 1rem;
+    color: rgba(255, 255, 255, 0.8);
+    background: #62759c;
+    border-bottom: none;
+    font-weight: bold;
+    display: flex;
+}
+
+.datalist-title {
+    font-size: 1.1rem;
+    flex: 1;
+}
+
+.datalist-close {
+    color: rgba(255, 255, 255, 0.8);
+    transition: color 0.3s;
+    font-weight: bold;
+    font-size: 1.2rem;
+    background: none;
+    cursor: pointer;
+    line-height: 1;
+    border: none;
+}
+
+.datalist-close:hover {
+    color: rgba(255, 255, 255, 1);
+}
+
+.datalist-body {
+    border: 1px solid rgba(30, 54, 101, 0.8);
+    border-radius: 0 0 0.25rem 0.25rem;
+    padding: 0.75rem 1rem;
+    background: #ffffff;
+}
+
+.datalist-search-area {
+    display: flex;
 }
 
 .datalist-search {
-    border-bottom-left-radius: 4px;
-    border-top-left-radius: 4px;
-    border: 1px solid #CCCCCC;
-    line-height: 1.42857143;
-    box-sizing: border-box;
-    display: table-cell;
-    padding: 6px 12px;
+    border-radius: 0.25rem 0 0 0.25rem;
+    border: 1px solid #ced4da;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    color: #495057;
     width: 100%;
+    flex: 1;
+}
+
+.datalist-search::-ms-clear {
+    display: none;
 }
 
 .datalist-rows {
-    vertical-align: top;
-    display: table-cell;
-    width: 1%;
+    border-radius: 0 0.25rem 0.25rem 0;
+    border: 1px solid #ced4da;
+    background: #e9ecef;
+    font-size: 0.875rem;
+    text-align: center;
+    border-left: none;
+    line-height: 1.5;
+    width: 3.5rem;
 }
 
-    .datalist-rows .ui-spinner {
-        border-radius: 0 5px 5px 0;
-        border-right: medium none;
-        box-sizing: content-box;
-        border-color: #CCCCCC;
-        border-left: 0 none;
-        height: 100%;
-    }
-
-    .datalist-rows input {
-        background-color: #EEEEEE;
-        line-height: 1.42857143;
-        box-sizing: border-box;
-        margin: 0 1.6em 0 0;
-        text-align: center;
-        padding: 6px 0;
-        width: 3.4em;
-    }
-
-    .datalist-rows a.ui-spinner-button {
-        border: 1px solid #CCCCCC;
-        border-bottom: none;
-        border-top: none;
-        width: 1.6em;
-    }
-
-    .datalist-rows a.ui-spinner-down {
-        border-top: 1px solid #CCCCCC;
-    }
-
-    .datalist-rows .ui-icon {
-        margin-left: -8px;
-        cursor: pointer;
-        left: 50%;
-    }
+.datalist-rows::-ms-clear {
+    display: none;
+}
 
 .datalist-selector {
-    vertical-align: middle;
-    white-space: nowrap;
-    display: table-cell;
-    width: 1%;
+    background: rgba(78, 169, 86, 0.8);
+    color: rgba(255, 255, 255, 0.9);
+    border: 1px solid #5c9845;
+    border-radius: 0.25rem;
+    transition: color 0.3s;
+    margin-left: 0.5rem;
+    padding: 0 0.5rem;
+    min-width: 7rem;
+    cursor: pointer;
 }
 
-    .datalist-selector button {
-        background-color: rgba(94, 186, 103, 0.81);
-        border: 1px solid #5C9845;
-        border-radius: 4px;
-        margin-left: 10px;
-        padding: 5px 8px;
-        min-width: 7em;
-        color: #FFFFFF;
-    }
-
-        .datalist-selector button:hover {
-            background-color: rgba(92, 175, 100, 0.81);
-        }
-
-.datalist-control-loader {
-    animation: datalist-spin 1s infinite linear;
-    border: 2px solid rgba(0, 0, 0, 0.2);
-    transition: opacity 0.3s linear;
-    border-top-color: #444444;
-    box-sizing: border-box;
-    top: calc(3px + 0.4em);
-    border-radius: 50%;
-    position: absolute;
-    display: none;
-    right: 0.8em;
-    height: 1em;
-    opacity: 0;
-    width: 1em;
-}
-
-.datalist-loading + .datalist-control-loader {
-    transition: opacity 1.5s linear;
-    display: block;
-    opacity: 1;
+.datalist-selector:hover {
+    color: #ffffff;
 }
 
 .datalist-content {
-    padding-right: 1px;
+    margin-top: 0.75rem;
+    min-height: 6.9rem;
     position: relative;
-    min-height: 7.3em;
 }
 
-.datalist-error,
+.datalist-dialog-error,
 .datalist-dialog-loader {
-    background-color: #FFFFFF;
-    border: 1px solid #DDDDDD;
+    border: 1px solid #dddddd;
+    transition: opacity 0.3s;
     justify-content: center;
+    background: #ffffff;
     align-items: center;
     position: absolute;
     display: flex;
     height: 100%;
     width: 100%;
+    opacity: 0;
 }
 
-    .datalist-dialog-loader > span {
-        animation: datalist-spin 1s infinite linear;
-        border: 0.5em solid rgba(0, 0, 0, 0.2);
-        border-top-color: #444444;
-    }
+.datalist-dialog-loader > span {
+    animation: datalist-spin 1s infinite linear;
+    border: 0.5rem solid rgba(0, 0, 0, 0.2);
+    border-top-color: #444444;
+}
 
-        .datalist-dialog-loader > span,
-        .datalist-dialog-loader > span:after {
-            border-radius: 50%;
-            height: 5em;
-            width: 5em;
-        }
+.datalist-dialog-loader > span,
+.datalist-dialog-loader > span:after {
+    border-radius: 50%;
+    height: 5rem;
+    width: 5rem;
+}
 
-.datalist-error {
-    background-color: #FFF6F6;
-    border-color: #EBCCD1;
-    color: #A94442;
+.datalist-dialog-error {
+    border-color: #ebccd1;
+    background: #fff6f6;
+    color: #a94442;
 }
 
 .datalist-table {
     overflow-x: auto;
+}
+
+.datalist-table table {
+    border-collapse: collapse;
+    border: none;
+    width: 100%;
+}
+
+.datalist-table tr {
+    cursor: pointer;
+}
+
+.datalist-table tbody tr:hover {
+    background: rgba(0, 0, 0, 0.05);
+}
+
+.datalist-table .selected {
+    background: rgba(0, 0, 0, 0.03);
+}
+
+.datalist-table th {
+    text-align: center;
+}
+
+.datalist-table th,
+.datalist-table td {
+    border: 1px solid #dee2e6;
+    padding: 0.25rem 0.5rem;
+    line-height: 1.5;
+}
+
+.datalist-table .datalist-asc::after {
+    padding-left: 0.25rem;
+    content: '\2193';
+}
+
+.datalist-table .datalist-desc::after {
+    padding-left: 0.25rem;
+    content: '\2191';
+}
+
+.datalist-table .datalist-split td {
+    background: #ffffff;
+    color: transparent;
+    font-size: 0.4rem;
+    cursor: default;
+    border: none;
+}
+
+.datalist-table td:last-child {
+    box-sizing: border-box;
+    text-align: center;
+    font-weight: bold;
+    width: 2rem;
+}
+
+.datalist-table td:last-child::after {
+    content: '\25CF';
+}
+
+.datalist-table .selected td:last-child::after {
+    content: '\2714';
+    color: #5cb85c;
+}
+
+.datalist-table .datalist-empty {
+    text-align: center;
+    cursor: default;
+}
+
+.datalist-table .datalist-empty:hover {
+    background: inherit;
+}
+
+.datalist-table .datalist-empty td {
+    font-weight: normal;
+}
+
+.datalist-table .datalist-empty td::after {
+    content: '';
+}
+
+.datalist-pager {
+    margin-top: 0.75rem;
+    text-align: right;
+}
+
+.datalist-pager button + button {
+    margin-left: 0.25rem;
+}
+
+.datalist-pager button {
+    transition: background-color 0.3s;
+    border: 1px solid #dee2e6;
+    padding: 0.4rem 0.125rem;
+    box-sizing: border-box;
+    min-width: 2.2rem;
+    line-height: 1.5;
+    background: none;
+    cursor: pointer;
+    color: #777777;
+}
+
+.datalist-pager button:focus,
+.datalist-pager button:hover {
+    background: #eeeeee;
+}
+
+.datalist-pager .active,
+.datalist-pager .active:focus,
+.datalist-pager .active:hover {
+    border-color: rgba(30, 54, 101, 0.8);
+    background: #62759c;
+    color: #ffffff;
+    cursor: default;
+}
+
+.datalist-autocomplete {
+    border: 1px solid #d3d3d3;
+    background: #ffffff;
+    margin-bottom: 1rem;
+    position: absolute;
+    list-style: none;
+    cursor: pointer;
+    z-index: 1200;
+    padding: 0;
+}
+
+.datalist-autocomplete li {
+    padding: 0.25rem 0.5rem;
+}
+
+.datalist-autocomplete li.active {
+    border: 1px solid #aaaaaa;
+    margin: -1px;
 }
 
 @keyframes datalist-spin {
@@ -296,116 +482,4 @@
     100% {
         transform: rotate(360deg);
     }
-}
-
-.datalist-dialog table {
-    border-collapse: collapse;
-    border: none;
-    width: 100%;
-}
-
-.datalist-dialog tbody tr:hover {
-    background-color: #ECECEC;
-}
-
-.datalist-dialog .selected {
-    background-color: #F5F5F5;
-}
-
-.datalist-dialog tr {
-    cursor: pointer;
-}
-
-.datalist-asc::after {
-    padding-left: 3px;
-    content: '\2193';
-}
-
-.datalist-desc::after {
-    padding-left: 3px;
-    content: '\2191';
-}
-
-.datalist-dialog th,
-.datalist-dialog td {
-    border: 1px solid #DDDDDD;
-    line-height: 1.42857143;
-    padding: 0.3em 0.6em;
-}
-
-.datalist-split td {
-    background-color: #FFFFFF;
-    color: transparent;
-    font-size: 0.4em;
-    cursor: default;
-    border: none;
-}
-
-.datalist-dialog td:last-child {
-    box-sizing: border-box;
-    text-align: center;
-    font-weight: bold;
-    width: 2.5em;
-}
-
-    .datalist-dialog td:last-child::after {
-        content: '\25CF';
-    }
-
-.datalist-dialog .selected td:last-child::after {
-    content: '\2714';
-    color: #5CB85C;
-}
-
-.datalist-dialog .datalist-empty {
-    text-align: center;
-    cursor: default;
-}
-
-    .datalist-dialog .datalist-empty:hover {
-        background-color: inherit;
-    }
-
-    .datalist-dialog .datalist-empty td::after {
-        content: '';
-    }
-
-.datalist-dialog ul {
-    padding-top: 0.8em;
-    text-align: right;
-    margin: 0;
-}
-
-    .datalist-dialog ul li {
-        display: inline;
-        cursor: pointer;
-    }
-
-        .datalist-dialog ul li + li a {
-            margin-left: 3px;
-        }
-
-    .datalist-dialog ul a {
-        border: 1px solid #DDDDDD;
-        box-sizing: content-box;
-        text-decoration: none;
-        display: inline-block;
-        padding: 0.4em 0.6em;
-        text-align: center;
-        min-width: 1em;
-        color: #777777;
-    }
-
-        .datalist-dialog ul a:focus,
-        .datalist-dialog ul a:hover {
-            background-color: #EEEEEE;
-            color: #777777;
-        }
-
-.datalist-dialog .active a,
-.datalist-dialog .active a:focus,
-.datalist-dialog .active a:hover {
-    background-color: rgba(77, 78, 80, 0.76);
-    border-color: rgba(77, 78, 80, 0.76);
-    color: #FFFFFF;
 }
