--- a/src/MvcTemplate.Web/Content/Shared/overrides.css
+++ b/src/MvcTemplate.Web/Content/Shared/overrides.css
@@ -19,6 +19,9 @@ a:hover {
   background: linear-gradient(#75a9c4, #5997b8);
   border: 1px solid #5997b8;
 }
+.form-control {
+  height: 2.375rem;
+}
 .input-group .form-control {
   z-index: 1;
 }
@@ -112,19 +115,20 @@ a:hover {
 .datalist-dialog th {
   text-align: center !important;
 }
-.datalist-dialog tbody tr:hover {
-  background-color: rgba(0, 0, 0, 0.02);
-}
-.datalist-dialog tbody .selected:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-}
+.datalist-browser:focus,
 .datalist-focus .datalist-control {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
   border-color: #80bdff;
+  outline: none;
 }
+.datalist-browser:focus.input-validation-error,
 .datalist-focus .datalist-control.input-validation-error {
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
   border-color: #DC3545;
+}
+.datalist-browser:active {
+  border-color: #ced4da;
+  box-shadow: none;
 }
 /* Mvc.Grid */
 .mvc-grid {
