--- a/src/MvcTemplate.Web/Content/Shared/overrides.less
+++ b/src/MvcTemplate.Web/Content/Shared/overrides.less
@@ -25,6 +25,10 @@ a:hover {
     }
 }
 
+.form-control {
+    height: 2.375rem;
+}
+
 .input-group .form-control {
     z-index: 1;
 }
@@ -140,30 +144,25 @@ a:hover {
 }
 
 /* Mvc.Datalist */
-.datalist-dialog {
-    th {
-        text-align: center !important;
-    }
-
-    tbody {
-        tr:hover {
-            background-color: rgba(0, 0, 0, 0.02);
-        }
-
-        .selected:hover {
-            background-color: rgba(0, 0, 0, 0.05);
-        }
-    }
+.datalist-dialog th {
+    text-align: center !important;
 }
 
+.datalist-browser:focus,
 .datalist-focus .datalist-control {
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
     border-color: #80bdff;
+    outline: none;
 
     &.input-validation-error {
         box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
         border-color: #DC3545;
     }
+}
+
+.datalist-browser:active {
+    border-color: #ced4da;
+    box-shadow: none;
 }
 
 /* Mvc.Grid */
